DCBBRAIN-5799 Рефакторинг сервисного слоя